Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-clcasher",
+  "name": "react-native-casher",
   "version": "1.0.0",
   "description": "clcasher",
   "scripts": {
