--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "license": "ISC",
   "homepage": "https://github.com/telldus/react-native-casher.git#readme",
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
-    "mock-async-storage": "^1.0.3",
-    "react": "16.11.0",
-    "react-native": "0.62.2"
+    "@react-native-community/async-storage": "^1.12.0",
+    "mock-async-storage": "^2.2.0",
+    "react": "^16.13.1",
+    "react-native": "^0.63.2"
   }
 }
