--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "author": "Clcorp",
   "license": "ISC",
   "homepage": "https://github.com/telldus/react-native-casher.git#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@react-native-community/async-storage": "^1.12.0",
     "mock-async-storage": "^2.2.0",
     "react": "^16.13.1",
-    "react-native": "^0.63.2"
+    "react-native": "^0.63.3"
   }
 }
